--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@layer components {
+  .button{
+    @apply border-2 w-full rounded-lg p-2 shadow-sm hover:bg-gray-200;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .input-container{
+    @apply flex flex-col gap-1 mt-2;
   }
-  to {
-    transform: rotate(360deg);
+
+  .custom-container{
+    @apply my-4 flex flex-col py-8 gap-2 items-center bg-slate-100 shadow-md rounded-lg;
   }
 }
